--- a/events.html
+++ b/events.html
@@ -1,45 +1,66 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>События - Каталог современного искусства — Тирасполь</title>
-    <link rel="stylesheet" href="styles/main.css">
-</head>
-<body class="container">
-    <header class="header">
-        <h1 class="header__title">Каталог современного искусства — Тирасполь</h1>
-        <nav class="nav">
-            <ul class="nav__list">
-                <li class="nav__item"><a href="index.html" class="nav__link">Главная</a></li>
-                <li class="nav__item"><a href="events.html" class="nav__link">События</a></li>
-                <li class="nav__item"><a href="artists.html" class="nav__link">Художники</a></li>
-                <li class="nav__item"><a href="map.html" class="nav__link">Карта</a></li>
-                <li class="nav__item"><a href="calendar.html" class="nav__link">Календарь</a></li>
-                <li class="nav__item"><a href="budget.html" class="nav__link">Бюджет</a></li>
-            </ul>
-        </nav>
-    </header>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>События - Каталог современного искусства — Тирасполь</title>
+        <link rel="stylesheet" href="styles/main.css" />
+    </head>
+    <body class="container">
+        <header class="header">
+            <h1 class="header__title">
+                Каталог современного искусства — Тирасполь
+            </h1>
+            <nav class="nav">
+                <ul class="nav__list">
+                    <li class="nav__item">
+                        <a href="index.html" class="nav__link">Главная</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="events.html" class="nav__link">События</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="artists.html" class="nav__link">Художники</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="map.html" class="nav__link">Карта</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="calendar.html" class="nav__link">Календарь</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="budget.html" class="nav__link">Бюджет</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
 
-    <main class="main">
-        <section class="section">
-            <h2 class="section__title">Актуальные события</h2>
-            <article>
-                <h3>Выставка "Новые горизонты"</h3>
-                <p>Современные художники представляют свои работы в галерее современного искусства. Выставка продлится до конца месяца.</p>
-            </article>
-            <article>
-                <h3>Лекция о современном искусстве</h3>
-                <p>Приглашаем на лекцию известного искусствоведа о тенденциях в современном искусстве.</p>
-            </article>
-        </section>
-    </main>
+        <main class="main">
+            <section class="section">
+                <h2 class="section__title">Актуальные события</h2>
+                <article>
+                    <h3>Выставка "Новые горизонты"</h3>
+                    <p>
+                        Современные художники представляют свои работы в галерее
+                        современного искусства. Выставка продлится до конца
+                        месяца.
+                    </p>
+                </article>
+                <article>
+                    <h3>Лекция о современном искусстве</h3>
+                    <p>
+                        Приглашаем на лекцию известного искусствоведа о
+                        тенденциях в современном искусстве.
+                    </p>
+                </article>
+            </section>
+        </main>
 
-    <footer class="footer">
-        <p class="footer__text">Каталог современного искусства — Тирасполь</p>
-        <p class="footer__text">Учебный проект</p>
-    </footer>
-</body>
+        <footer class="footer">
+            <p class="footer__text">
+                Каталог современного искусства — Тирасполь
+            </p>
+            <p class="footer__text">Учебный проект</p>
+        </footer>
+    </body>
 </html>
-
-
