--- a/map.html
+++ b/map.html
@@ -1,47 +1,67 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Карта - Каталог современного искусства — Тирасполь</title>
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-</head>
-<body class="container">
-    <header class="header">
-        <h1 class="header__title">Каталог современного искусства — Тирасполь</h1>
-        <nav class="nav">
-            <ul class="nav__list">
-                <li class="nav__item"><a href="index.html" class="nav__link">Главная</a></li>
-                <li class="nav__item"><a href="events.html" class="nav__link">События</a></li>
-                <li class="nav__item"><a href="artists.html" class="nav__link">Художники</a></li>
-                <li class="nav__item"><a href="map.html" class="nav__link">Карта</a></li>
-                <li class="nav__item"><a href="calendar.html" class="nav__link">Календарь</a></li>
-                <li class="nav__item"><a href="budget.html" class="nav__link">Бюджет</a></li>
-            </ul>
-        </nav>
-    </header>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Карта - Каталог современного искусства — Тирасполь</title>
+        <link rel="stylesheet" href="styles/main.css" />
+        <link
+            rel="stylesheet"
+            href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+        />
+        <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    </head>
+    <body class="container">
+        <header class="header">
+            <h1 class="header__title">
+                Каталог современного искусства — Тирасполь
+            </h1>
+            <nav class="nav">
+                <ul class="nav__list">
+                    <li class="nav__item">
+                        <a href="index.html" class="nav__link">Главная</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="events.html" class="nav__link">События</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="artists.html" class="nav__link">Художники</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="map.html" class="nav__link">Карта</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="calendar.html" class="nav__link">Календарь</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="budget.html" class="nav__link">Бюджет</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
 
-    <main class="main">
-        <section class="section">
-            <h2 class="section__title">Карта культурных пространств Тирасполя</h2>
-            <div id="map-container" class="map-container"></div>
-            <div class="map-legend">
-                <p class="map-legend__text">Кликните на маркер, чтобы увидеть события на площадке</p>
-            </div>
-        </section>
-    </main>
+        <main class="main">
+            <section class="section">
+                <h2 class="section__title">
+                    Карта культурных пространств Тирасполя
+                </h2>
+                <div id="map-container" class="map-container"></div>
+                <div class="map-legend">
+                    <p class="map-legend__text">
+                        Кликните на маркер, чтобы увидеть события на площадке
+                    </p>
+                </div>
+            </section>
+        </main>
 
-    <footer class="footer">
-        <p class="footer__text">Каталог современного искусства — Тирасполь</p>
-        <p class="footer__text">Учебный проект</p>
-    </footer>
-    <script src="scripts/data.js"></script>
-    <script src="scripts/common.js"></script>
-    <script src="scripts/map.js"></script>
-</body>
+        <footer class="footer">
+            <p class="footer__text">
+                Каталог современного искусства — Тирасполь
+            </p>
+            <p class="footer__text">Учебный проект</p>
+        </footer>
+        <script src="scripts/data.js"></script>
+        <script src="scripts/common.js"></script>
+        <script src="scripts/map.js"></script>
+    </body>
 </html>
-
-
-
